added docstring and requirements.txt

--- a/templates/app_templatetags/detail_menu.html
+++ b/templates/app_templatetags/detail_menu.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>{{ item }}</title>
+    <title>{{ item.title }}</title>
 </head>
 <body>
-
+<h1>{{ item.title }}</h1>
 </body>
 </html>
